--- a/battleships/Battleships.csproj
+++ b/battleships/Battleships.csproj
@@ -232,64 +232,129 @@
     <None Include="Resources\SwinGame.ico">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="Resources\images\2ship_deploy_horiz_1.jpg" />
-    <None Include="Resources\images\2ship_deploy_horiz_2.jpg" />
-    <None Include="Resources\images\2ship_deploy_horiz_3.jpg" />
-    <None Include="Resources\images\2ship_deploy_horiz_4.jpg" />
-    <None Include="Resources\images\2ship_deploy_horiz_5.jpg" />
-    <None Include="Resources\images\2ship_deploy_vert_1.jpg" />
-    <None Include="Resources\images\2ship_deploy_vert_2.jpg" />
-    <None Include="Resources\images\2ship_deploy_vert_3.jpg" />
-    <None Include="Resources\images\2ship_deploy_vert_4.jpg" />
-    <None Include="Resources\images\2ship_deploy_vert_5.jpg" />
-    <None Include="Resources\images\deploy.jpg" />
-    <None Include="Resources\images\deploy2.jpg" />
-    <None Include="Resources\images\deploy_back_button.png" />
-    <None Include="Resources\images\deploy_button_hl.png" />
-    <None Include="Resources\images\deploy_button_hl2.jpg" />
-    <None Include="Resources\images\deploy_cancel_button.png" />
-    <None Include="Resources\images\deploy_dir_button_horiz.png" />
-    <None Include="Resources\images\deploy_dir_button_horiz2.jpg" />
-    <None Include="Resources\images\deploy_dir_button_vert.png" />
-    <None Include="Resources\images\deploy_dir_button_vert2.jpg" />
-    <None Include="Resources\images\deploy_play_button.png" />
-    <None Include="Resources\images\deploy_play_button2.jpg" />
-    <None Include="Resources\images\deploy_randomize_button.png" />
-    <None Include="Resources\images\deploy_randomize_button2.jpg" />
-    <None Include="Resources\images\discover.jpg" />
-    <None Include="Resources\images\discover2.jpg" />
-    <None Include="Resources\images\discover_quit_button.png" />
-    <None Include="Resources\images\explosion.png" />
-    <None Include="Resources\images\explosion2.jpg" />
-    <None Include="Resources\images\fdFile.png" />
-    <None Include="Resources\images\fdFolder.png" />
-    <None Include="Resources\images\FileDialog_Active.png" />
-    <None Include="Resources\images\FileDialog_Background.png" />
-    <None Include="Resources\images\FileDialog_Inactive.png" />
-    <None Include="Resources\images\FileDialog_Scroll.png" />
-    <None Include="Resources\images\FileDialog_ScrollSmall.png" />
-    <None Include="Resources\images\instruction.jpg" />
-    <None Include="Resources\images\instruction2.jpg" />
-    <None Include="Resources\images\loader_empty.png" />
-    <None Include="Resources\images\loader_full.png" />
-    <None Include="Resources\images\main_page.jpg" />
-    <None Include="Resources\images\main_page2.jpg" />
-    <None Include="Resources\images\ship_deploy_horiz_1.png" />
-    <None Include="Resources\images\ship_deploy_horiz_2.png" />
-    <None Include="Resources\images\ship_deploy_horiz_3.png" />
-    <None Include="Resources\images\ship_deploy_horiz_4.png" />
-    <None Include="Resources\images\ship_deploy_horiz_5.png" />
-    <None Include="Resources\images\ship_deploy_vert_1.png" />
-    <None Include="Resources\images\ship_deploy_vert_2.png" />
-    <None Include="Resources\images\ship_deploy_vert_3.png" />
-    <None Include="Resources\images\ship_deploy_vert_4.png" />
-    <None Include="Resources\images\ship_deploy_vert_5.png" />
-    <None Include="Resources\images\splash.png" />
-    <None Include="Resources\images\splash2.jpg" />
-    <None Include="Resources\images\SplashBack.png" />
-    <None Include="Resources\images\Swinburne.jpg" />
-    <None Include="Resources\images\SwinGameAni.jpg" />
-    <None Include="Resources\images\SwinGameAni.png" />
+    <None Include="Resources\images\deploy.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resources\images\deploy2.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resources\images\deploy_back_button.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resources\images\deploy_button_hl.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resources\images\deploy_cancel_button.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resources\images\deploy_dir_button_horiz.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resources\images\deploy_dir_button_vert.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resources\images\deploy_play_button.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resources\images\deploy_randomize_button.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resources\images\discover.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resources\images\discover2.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resources\images\discover_quit_button.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resources\images\explosion.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resources\images\fdFile.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resources\images\fdFolder.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resources\images\FileDialog_Active.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resources\images\FileDialog_Background.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resources\images\FileDialog_Inactive.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resources\images\FileDialog_Scroll.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resources\images\FileDialog_ScrollSmall.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resources\images\instruction.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resources\images\instruction2.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resources\images\loader_empty.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resources\images\loader_full.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resources\images\main_page.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resources\images\main_page2.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resources\images\ship_deploy_horiz_1.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resources\images\ship_deploy_horiz_2.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resources\images\ship_deploy_horiz_3.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resources\images\ship_deploy_horiz_4.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resources\images\ship_deploy_horiz_5.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resources\images\ship_deploy_vert_1.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resources\images\ship_deploy_vert_2.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resources\images\ship_deploy_vert_3.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resources\images\ship_deploy_vert_4.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resources\images\ship_deploy_vert_5.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resources\images\splash.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resources\images\SplashBack.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resources\images\Swinburne.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resources\images\SwinGameAni.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resources\images\SwinGameAni.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="src\**\*.cs" />
